--- a/index.html
+++ b/index.html
@@ -613,11 +613,10 @@
                 <p>03406340240</p>
               </div>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12572.168063138446!2d70.32066480376277!3d28.414143034463812!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39375b3721022e03%3A0xa7b882ba164fab7a!2sDevicon%20Software%20House!5e0!3m2!1sen!2s!4v1690266451127!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"style="border:0; width: 100%; height: 290px;"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14036.748751857496!2d70.3200276!3d28.4136081!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39375b3721022e03%3A0xa7b882ba164fab7a!2sDevicon%20Software%20House!5e0!3m2!1sen!2s!4v1690267508685!5m2!1sen!2s"
+          " frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
-
-          </div>
-
+</div>
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
