--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/medico.png" class="img-fluid" alt=""style="height: 211px";>>
+              <img src="assets/img/portfolio/medico.png" class="img-fluid" alt=""style="height: 211px";>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/medico.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -444,7 +444,7 @@
             </div>
           </div>
 
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Portfolio Section -->
