--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Hello Guys Im Ahmad Bhatti. A versatile freelancer proficient in frontend development and digital marketing. Crafting user-friendly interfaces, optimizing online presence, and delivering exceptional solutions for clients' success.</p>
         </div>
 
         <div class="row">
